RESOLVED FIXED96400
WTF fails to compile in thumb mode when llint is enabled.
https://bugs.webkit.org/show_bug.cgi?id=96400
Summary WTF fails to compile in thumb mode when llint is enabled.
Byungseon Shin
Reported 2012-09-11 09:26:36 PDT
libWTF_la_FastMalloc.o compile error with follwing error when the -mthumb option is passed to Armv7 GCC Cross Compiler for llint build mode of JavaScript Core. GNU assembler version 2.21(armv7a-linux-gnuabi) using BFD version(GNU Binutils) 2.21 /tmp/ccqNNDc0.s: Assembler messages: /tmp/ccqNNDc0.s: 1268: Error: bad immediate value for offset(4080) /tmp/ccqNNDc0.s: 1271: Error: bad immediate value for offset(4080) /tmp/ccqNNDc0.s: 1800: Error: bad immediate value for offset(4080) /tmp/ccqNNDc0.s: 1803: Error: bad immediate value for offset(4080) /tmp/ccqNNDc0.s: 2758: Error: bad immediate value for offset(4080) /tmp/ccqNNDc0.s: 2761: Error: bad immediate value for offset(4080) ................ /tmp/ccqNNDc0.s: 10064: Error: bad immediate value for offset(4080) /tmp/ccqNNDc0.s: 10067: Error: bad immediate value for offset(4080) /opt/crosstool/bin/../lib/gcc/armv7a-linux-gnuabi/4.5.1/../../../../armv7a-linux-gnuabi/bin/as: BFD (GNU Binutils) 2.21 assertion fail ../../binutils-2.21/bfd/elf.c:2795 armv7a-vfp-linux-gnueabi-g++: Internal error: Segmentation fault(program as)
Attachments
Patch (1.20 KB, patch)
2012-09-11 09:57 PDT, Byungseon Shin
no flags
Patch (1.38 KB, patch)
2012-09-11 17:44 PDT, Byungseon Shin
no flags
Update ChangeLog (1.39 KB, patch)
2012-09-13 18:23 PDT, Byungseon Shin
no flags
Byungseon Shin
Comment 1 2012-09-11 09:57:39 PDT
Filip Pizlo
Comment 2 2012-09-11 11:41:57 PDT
Comment on attachment 163391 [details] Patch Can you rebase the patch?
Byungseon Shin
Comment 3 2012-09-11 17:43:58 PDT
Reopening to attach new patch.
Byungseon Shin
Comment 4 2012-09-11 17:44:01 PDT
Mark Lam
Comment 5 2012-09-12 01:23:00 PDT
I don't have reviewer privileges, but the change looks good to me. I verified it against gcc specs here: http://gcc.gnu.org/onlinedocs/gcc-4.7.1/gcc.pdf (page 395).
Byungseon Shin
Comment 6 2012-09-13 18:23:17 PDT
Reopening to attach new patch.
Byungseon Shin
Comment 7 2012-09-13 18:23:19 PDT
Created attachment 164023 [details] Update ChangeLog
Joone Hur
Comment 8 2012-09-13 18:35:31 PDT
This patch doesn't land yet.
WebKit Review Bot
Comment 9 2012-09-13 22:51:24 PDT
Comment on attachment 164023 [details] Update ChangeLog Clearing flags on attachment: 164023 Committed r128557: <http://trac.webkit.org/changeset/128557>
WebKit Review Bot
Comment 10 2012-09-13 22:51:28 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.