Fix for WTF fails to compile in thumb mode when llint is enabled. https://bugs.webkit.org/show_bug.cgi?id=96400

Patch by Byungseon Shin <xingri@gmail.com> on 2012-09-13
Reviewed by Filip Pizlo.

When using "+m" with Armv7 cross compiler assume offset range between +/- 4095
(the largest possible offset range).
However, ldrex/strex can only use offset range of 0~1020, so "+m" needed to be changed to "+Q".
Ref. http://gcc.gnu.org/bugzilla/show_bug.cgi?id=54480

* wtf/Atomics.h:
(WTF::weakCompareAndSwap):

Canonical link: https://commits.webkit.org/114643@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@128557 268f45cc-cd09-0410-ab3c-d52691b4dbfc